kubernetes/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nautobot
  namespace: nautobot
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nautobot.local.byrnbaker.me`)
      kind: Rule
      services:
        - name: nautobot-default
          port: 80
      middlewares:
        - name: default-headers
  # tls:
  #   secretName: local-byrnbaker-me-staging-tls
