kubernetes/nautobot-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nautobot-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nautobot.homelab.byrnbaker.me`)
      kind: Rule
      services:
        - name: nautobot-default
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: homelab-byrnbaker-me-tls
